--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fizzbuzz_js_boa",
   "version": "1.0.0",
-  "description": "",
+  "description": "let  fizzBuzz = fs.readFileSync('./src/js/fizz-buzz.js'); eval( fizzBuzz + `\\nexports.FizzBuzz = FizzBuzz;`)",
   "main": "index.js",
   "scripts": {
     "test": "npm run features && npm run specs",
@@ -15,17 +15,7 @@
   "devDependencies": {
     "e2e_training_wheels": "0.0.36"
   },
-  "dependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SnailCoder1/fizzbuzz_js_BOA.git"
-  },
-  "bugs": {
-    "url": "https://github.com/SnailCoder1/fizzbuzz_js_BOA/issues"
-  },
-  "homepage": "https://github.com/SnailCoder1/fizzbuzz_js_BOA#readme",
-  "bin": {
-    "training-wheels:generate": "node ./node_modules/e2e_training_wheels/dist/generators.js",
-    "training-wheels:install": "node ./node_modules/e2e_training_wheels/dist/install.js"
+  "dependencies": {
+    "assertion-error": "^1.1.0"
   }
 }
