--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "e2e_training_wheels": "0.0.36"
+    "e2e_training_wheels": "0.0.36",
+    "tailwindcss": "^0.7.4"
   },
   "dependencies": {
     "assertion-error": "^1.1.0"
